ajout documentation, jacoco, javadoc et tests